# docs/swagger.json
@@ -141,6 +141,11 @@
         },
         "/api/v1/hello": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Hello",
                 "consumes": [
                     "application/json"
